<resources>
    <string name="app_name">EducationAKnow</string>

    <string name="login_username_hint_text">输入手机号</string>
    <string name="login_password_hint_text">输入密码</string>
    <string name="login_bt_text">登 录</string>
    <string name="to_register_bt_text">注 册</string>
    <string name="forget_pwd_text">忘记密码>></string>

    <!--刷新-->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <!--主界面-->
    <string name="main_search_hint_text">悦童小饭桌</string>
    <string name="main_search_position_icon_text">地点</string>
    <string name="main_search_sure_bt_text">搜 索</string>
</resources>
