<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:background="@drawable/login_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/login_edit_bg"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/telephone_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:inputType="phone"
            android:hint="@string/login_username_hint_text" />

        <ImageView
            android:layout_width="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_height="1dp"
            android:background="#c4c3c4" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/login_password_hint_text" />
    </LinearLayout>

    <Button
        android:id="@+id/login_bt"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:background="@drawable/login_bt_bg"
        android:text="@string/login_bt_text"
        android:onClick="Login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/to_register_bt"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:background="@drawable/to_register_bt_bg"
        android:text="@string/to_register_bt_text"
        android:onClick="Register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="70dp"
        android:gravity="center_horizontal"
        android:id="@+id/forget_pwd_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_pwd_text"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

</LinearLayout>